--- a/client/index.html
+++ b/client/index.html
@@ -3,12 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/shield-lock.svg" />
+    <link rel="apple-touch-icon" href="/shield-lock.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Farhan Ansari | Cybersecurity Professional</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="description" content="Cybersecurity professional with expertise in vulnerability assessment, security protocols, threat intelligence, and cloud security." />
   </head>
   <body>
+    <!-- Hidden form for Netlify -->
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <input type="text" name="subject" />
+      <textarea name="message"></textarea>
+    </form>
+    
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
