Integrated Google Analytics

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,16 @@
             y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
         })(window, document, "clarity", "script", "qu6oc47elc");
     </script>
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S2KWNV9GQB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S2KWNV9GQB');
+</script>
   </head>
   <body>
     <!-- Hidden form for Netlify -->
