--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <meta name="color-scheme" content="dark light">
     <meta name="theme-color" content="#121212" media="(prefers-color-scheme: dark)">
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
-    <title>Farhan Ansari | Cybersecurity Professional</title>
+    <title>Vedant Bhalerao | Cybersecurity Professional</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;700&display=swap" rel="stylesheet">
     <meta name="description" content="Cybersecurity professional with expertise in vulnerability assessment, security protocols, threat intelligence, and cloud security." />
 
